added coverage report
added pip dependency,
added coverage dependency,
runs pytest and appends coverage report

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,11 +43,13 @@ commands = flake8 adnipy
 setenv =
 	PYTHONPATH = {toxinidir}
 deps =
+    pip==19.3.1
+    coverage
 	pytest
     pandas23: pandas>=0.23,<0.24
     pandas24: pandas>=0.24,<0.25
     pandas25: pandas>=0.25
 commands =
 	pip install -U pip
-	py.test --basetemp={envtmpdir}
+	coverage run -a -m py.test --basetemp={envtmpdir}
 
