--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,12 @@ python:
 
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox-travis
+install:
+  - pip install --user tox-travis
+  - pip install --user codecov
 
 # Command to run tests, e.g. python setup.py test
 script: tox
+
+after_success:
+    codecov
