--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ python:
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-  - pip install --user tox-travis
-  - pip install --user codecov
+  - pip install tox-travis
+  - pip install codecov
 
 # Command to run tests, e.g. python setup.py test
 script: tox
