--- a/setup.cfg
+++ b/setup.cfg
@@ -15,21 +15,22 @@ search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [flake8]
-exclude = 
+exclude =
 	docs
 	.eggs
 	.tox
-per-file-ignores = 
+per-file-ignores =
 	adnipy/__init__.py:F401, E402, I001
 
 [tool:pytest]
 collect_ignore = ['setup.py']
+addopts = --doctest-modules --doctest-continue-on-failure
 
 [tox:tox]
 envlist = py{35,36,37}-pandas{23,24,25}, flake8
 
 [travis]
-python = 
+python =
 	3.7: py37
 	3.6: py36
 	3.5: py35
@@ -40,16 +41,16 @@ deps = flake8
 commands = flake8 adnipy
 
 [testenv]
-setenv = 
+setenv =
 	PYTHONPATH = {toxinidir}
-deps = 
+deps =
 	pip==19.3.1
 	coverage
 	pytest
 	pandas23: pandas>=0.23,<0.24
 	pandas24: pandas>=0.24,<0.25
 	pandas25: pandas>=0.25
-commands = 
+commands =
 	pip install -U pip
 	coverage run -a -m py.test --basetemp={envtmpdir}
 
