added sphinx_rtd_theme dependency for doctests

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ deps =
 	pandas23: pandas>=0.23,<0.24
 	pandas24: pandas>=0.24,<0.25
 	pandas25: pandas>=0.25
+    sphinx_rtd_theme
 commands =
 	pip install -U pip
 	coverage run -a -m py.test --basetemp={envtmpdir}
