--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,13 @@ search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [flake8]
+application-import-names = adnipy
+docstring-convention = numpy
 exclude =
 	docs
 	.eggs
 	.tox
+import-order-style = pep8
 per-file-ignores =
 	adnipy/__init__.py:F401, E402, I001
 
@@ -27,7 +30,7 @@ collect_ignore = ['setup.py']
 addopts = --doctest-modules --doctest-continue-on-failure
 
 [tox:tox]
-envlist = py{35,36,37}-pandas{23,24,25}, flake8
+envlist = py{35,36,37}-pandas{23,24,25}, flake8, doc8
 
 [travis]
 python =
@@ -36,9 +39,21 @@ python =
 	3.5: py35
 
 [testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 adnipy
+deps =
+    flake8
+    flake8-bugbear
+    flake8-docstrings
+    flake8-import-order
+    pep8-naming
+commands =
+    flake8
+
+[testenv:doc8]
+deps =
+    sphinx==1.8.5
+    doc8
+commands =
+    doc8 docs
 
 [testenv]
 setenv =
