Added --user option to pip upgrade
Appveyor build throws EnvironmentError for denied access.
Using --user is recommended.

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,6 @@ deps =
 	pandas25: pandas>=0.25
     sphinx_rtd_theme
 commands =
-	pip install -U pip
+	pip install --user -U pip
 	coverage run -a -m py.test --basetemp={envtmpdir}
 
