Added testing for python 3.8
Python 3.8 should be covered by the automated tests and the documentation.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,9 @@ environment:
   - TOXENV: py37-pandas23
   - TOXENV: py37-pandas24
   - TOXENV: py37-pandas25
+  - TOXENV: py38-pandas23
+  - TOXENV: py38-pandas24
+  - TOXENV: py38-pandas25
 
 build: off
 
