Added testing for pandas 1.0 and higher
Pandas 1.0.x should be covered by testing to test compatibility in the future.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,15 +5,19 @@ environment:
   - TOXENV: py35-pandas23
   - TOXENV: py35-pandas24
   - TOXENV: py35-pandas25
+  - TOXENV: py35-pandas10
   - TOXENV: py36-pandas23
   - TOXENV: py36-pandas24
   - TOXENV: py36-pandas25
+  - TOXENV: py36-pandas10
   - TOXENV: py37-pandas23
   - TOXENV: py37-pandas24
   - TOXENV: py37-pandas25
+  - TOXENV: py37-pandas10
   - TOXENV: py38-pandas23
   - TOXENV: py38-pandas24
   - TOXENV: py38-pandas25
+  - TOXENV: py38-pandas10
 
 build: off
 
