--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ collect_ignore = ['setup.py']
 addopts = --doctest-modules --doctest-continue-on-failure
 
 [tox:tox]
-envlist = py{35,36,37,38}-pandas{23,24,25}, flake8, doc8
+envlist = py{35,36,37,38}-pandas{23,24,25,10}, flake8, doc8
 
 [travis]
 python =
@@ -65,7 +65,8 @@ deps =
 	pytest
 	pandas23: pandas>=0.23,<0.24
 	pandas24: pandas>=0.24,<0.25
-	pandas25: pandas>=0.25
+	pandas25: pandas>=0.25,<1.0
+    pandas10: pandas>=1.0
     sphinx_rtd_theme
 commands =
 	pip install --user -U pip
