--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,12 @@ collect_ignore = ['setup.py']
 addopts = --doctest-modules --doctest-continue-on-failure
 
 [tox:tox]
-envlist = py{35,36,37,38}-pandas{23,24,25,10}, flake8, doc8
+envlist =
+    py{35,36,37,38}-pandas{23,24,25}
+    # Python 3.5 is not supported by pandas>=1.0
+    py{36,37,38}-pandas10
+    flake8
+    doc8
 
 [travis]
 python =
