--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
+  - pip install Cython --install-option="--no-cython-compile"
   - pip install tox-travis
   - pip install codecov
 
