--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ setenv =
 deps =
 	coverage
 	pytest
+    py38-pandas{23,24}: cython ; sys_platform == "linux"
 	pandas23: pandas>=0.23,<0.24
 	pandas24: pandas>=0.24,<0.25
 	pandas25: pandas>=0.25,<1.0
