Fix cython not getting installed on appveyor

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,7 +67,7 @@ setenv =
 deps =
 	coverage
 	pytest
-    py38-pandas{23,24}: cython ; sys_platform == "linux"
+    py38-pandas{23,24}: cython
 	pandas23: pandas>=0.23,<0.24
 	pandas24: pandas>=0.24,<0.25
 	pandas25: pandas>=0.25,<1.0
