Remove incompatible versions from testing and ci

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,8 @@ addopts = --doctest-modules --doctest-continue-on-failure
 
 [tox:tox]
 envlist =
-    py{35,36,37,38}-pandas{23,24,25}
-    # Python 3.5 is not supported by pandas>=1.0
+    py{35,36,37}-pandas{23,24}
+    py{35,36,37,38}-pandas25
     py{36,37,38}-pandas10
     flake8
     doc8
@@ -67,7 +67,6 @@ setenv =
 deps =
 	coverage
 	pytest
-    py38-pandas{23,24}: cython
 	pandas23: pandas>=0.23,<0.24
 	pandas24: pandas>=0.24,<0.25
 	pandas25: pandas>=0.25,<1.0
