Add .pre-commit-config.yaml and apply style

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,9 +21,12 @@ exclude =
 	docs
 	.eggs
 	.tox
+max-line-length = 88
+ignore = E203, W503
 import-order-style = pep8
 per-file-ignores =
 	adnipy/__init__.py:F401, E402, I001
+    docs/conf.py:E402
 
 [tool:pytest]
 collect_ignore = ['setup.py']
@@ -74,4 +77,3 @@ deps =
     sphinx_rtd_theme
 commands =
 	coverage run -a -m py.test --basetemp={envtmpdir}
-
