--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,4 +20,6 @@ repos:
       - id: flake8
         additional_dependencies:
           - flake8-bugbear
+          - flake8-docstrings
+          - flake8-import-order
           - pep8-naming
