--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,3 +23,7 @@ repos:
           - flake8-docstrings
           - flake8-import-order
           - pep8-naming
+  - repo: https://github.com/timothycrosley/isort/
+    rev: "5.1.1"
+    hooks:
+      - id: isort
