Add isort profile=black

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,9 @@ tag = True
 [aliases]
 test = pytest
 
+[isort]
+profile=black
+
 [bumpversion:file:setup.py]
 search = version="{current_version}"
 replace = version="{new_version}"
