Add and apply pylint

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,12 @@ test = pytest
 [isort]
 profile=black
 
+[pylint]
+max-line-length = 88
+
+[pylint.messages_control]
+disable = C0330, C0326
+
 [bumpversion:file:setup.py]
 search = version="{current_version}"
 replace = version="{new_version}"
