Change ignore to extend-ignore

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ exclude =
 	.eggs
 	.tox
 max-line-length = 88
-ignore = E203, W503
+extend-ignore = E203, W503
 import-order-style = pep8
 per-file-ignores =
 	adnipy/__init__.py:F401, E402, I001
