Add test for branch coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,9 @@ per-file-ignores =
 	adnipy/__init__.py:F401, E402, I001
     docs/conf.py:E402
 
+[coverage:run]
+branch = True
+
 [tool:pytest]
 collect_ignore = ['setup.py']
 addopts = --doctest-modules --doctest-continue-on-failure
