Fix move unknown config option to addopts

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,8 +41,7 @@ per-file-ignores =
 branch = True
 
 [tool:pytest]
-collect_ignore = ['setup.py']
-addopts = --doctest-modules --doctest-continue-on-failure
+addopts = --doctest-modules --doctest-continue-on-failure --ignore=setup.py
 
 [tox:tox]
 envlist =
