--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,8 @@ addopts = --doctest-modules --doctest-continue-on-failure --ignore=setup.py
 envlist =
     py{35,36,37}-pandas{23,24}
     py{35,36,37,38}-pandas25
-    py{36,37,38}-pandas10
+    py{36,37,38,39}-pandas10
+    py{37,38,39,310}-pandas13
     flake8
     doc8
 
@@ -84,7 +85,8 @@ deps =
 	pandas23: pandas>=0.23,<0.24
 	pandas24: pandas>=0.24,<0.25
 	pandas25: pandas>=0.25,<1.0
-    pandas10: pandas>=1.0
+    pandas10: pandas>=1.0,<1.1
+    pandas13: pandas>=1.3
     sphinx_rtd_theme
 commands =
 	coverage run -a -m py.test --basetemp={envtmpdir}
