--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,13 @@ environment:
   - TOXENV: py37-pandas24
   - TOXENV: py37-pandas25
   - TOXENV: py37-pandas10
+  - TOXENV: py37-pandas13
   - TOXENV: py38-pandas25
   - TOXENV: py38-pandas10
+  - TOXENV: py38-pandas13
+  - TOXENV: py39-pandas10
+  - TOXENV: py39-pandas13
+  - TOXENV: py310-pandas13
 
 build: off
 
