--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,9 +17,9 @@ environment:
   - TOXENV: py38-pandas25
   - TOXENV: py38-pandas10
   - TOXENV: py38-pandas13
-  - TOXENV: py39-pandas10
-  - TOXENV: py39-pandas13
-  - TOXENV: py310-pandas13
+  # - TOXENV: py39-pandas10
+  # - TOXENV: py39-pandas13
+  # - TOXENV: py310-pandas13
 
 build: off
 
