--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.1.0
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -11,12 +11,12 @@ repos:
       - id: check-case-conflict
       - id: requirements-txt-fixer
   - repo: https://github.com/psf/black
-    rev: 19.10b0
+    rev: 23.7.0
     hooks:
       - id: black
         language_version: python3
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.1.0
     hooks:
       - id: flake8
         additional_dependencies:
@@ -25,12 +25,12 @@ repos:
           - flake8-import-order
           - pep8-naming
   - repo: https://github.com/timothycrosley/isort/
-    rev: 5.1.2
+    rev: 5.12.0
     hooks:
       - id: isort
 
   - repo: https://github.com/PyCQA/pylint/
-    rev: pylint-2.5.0
+    rev: v3.0.0a7
     hooks:
       - id: pylint
         args: [--disable=E0401]
