Update tox config for current versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ tag = True
 test = pytest
 
 [isort]
-profile=black
+profile = black
 
 [pylint]
 max-line-length = 88
@@ -24,14 +24,16 @@ replace = __version__ = "{new_version}"
 application-import-names = adnipy
 docstring-convention = numpy
 exclude =
-	docs
-	.eggs
-	.tox
+    docs
+    .eggs
+    .tox
+    .venv
+    build
 max-line-length = 88
 extend-ignore = E203, W503
 import-order-style = pep8
 per-file-ignores =
-	adnipy/__init__.py:F401, E402, I001
+    adnipy/__init__.py:F401, E402, I001
     docs/conf.py:E402
 
 [coverage:run]
@@ -42,21 +44,16 @@ addopts = --doctest-modules --doctest-continue-on-failure --ignore=setup.py
 
 [tox:tox]
 envlist =
-    py{35,36,37}-pandas{23,24}
-    py{35,36,37,38}-pandas25
-    py{36,37,38,39}-pandas10
-    py{37,38,39,310}-pandas13
+    py{38,39,310,311}-pandas{1,2,3}
     flake8
     doc8
 
 [travis]
 python =
+    3.11: py311
     3.10: py310
     3.9: py39
     3.8: py38
-	3.7: py37
-	3.6: py36
-	3.5: py35
 
 [testenv:flake8]
 deps =
@@ -77,15 +74,13 @@ commands =
 
 [testenv]
 setenv =
-	PYTHONPATH = {toxinidir}
+    PYTHONPATH = {toxinidir}
 deps =
-	coverage
-	pytest
-	pandas23: pandas>=0.23,<0.24
-	pandas24: pandas>=0.24,<0.25
-	pandas25: pandas>=0.25,<1.0
-    pandas10: pandas>=1.0,<1.1
-    pandas13: pandas>=1.3
+    coverage
+    pytest
+    pandas1: pandas<2.0.0
+    pandas2: pandas<2.1.0
+    pandas3: pandas
     sphinx_rtd_theme
 commands =
-	coverage run -a -m py.test --basetemp={envtmpdir}
+    coverage run -a -m pytest --basetemp={envtmpdir}
