Add prettier pre-commit hook

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,17 @@
 
 language: python
 python:
-  - "3.8"
-  - "3.9"
-  - "3.10"
-  - "3.11"
-
+    - "3.8"
+    - "3.9"
+    - "3.10"
+    - "3.11"
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-  - pip install tox-travis
-  - pip install codecov
+    - pip install tox-travis
+    - pip install codecov
 
 # Command to run tests, e.g. python setup.py test
 script: tox
 
-after_success:
-    codecov
+after_success: codecov
