--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,9 @@
 # appveyor.yml
+image:
+    - Visual Studio 2019
+    - Ubuntu
+    - macOS
+
 environment:
     matrix:
         - TOXENV: py38-pandas1
