Add dependency constraint for pandas with numpy version

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,6 +78,7 @@ setenv =
 deps =
     coverage
     pytest
+    pandas{1,2,3}: numpy<2.0.0
     pandas1: pandas<2.0.0
     pandas2: pandas<2.1.0
     pandas3: pandas
