Add pyproject.toml for project configuration and update setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ profile = black
 [pylint]
 max-line-length = 88
 
-[bumpversion:file:setup.py]
+[bumpversion:file:pyproject.toml]
 search = version="{current_version}"
 replace = version="{new_version}"
 
@@ -44,7 +44,9 @@ addopts = --doctest-modules --doctest-continue-on-failure --ignore=setup.py
 
 [tox:tox]
 envlist =
-    py{38,39,310,311}-pandas{1,2,3}
+    py{310,311,312,313}-pandas2
+    flake8
+    doc8
     flake8
     doc8
 
@@ -78,10 +80,7 @@ setenv =
 deps =
     coverage
     pytest
-    pandas{1,2,3}: numpy<2.0.0
-    pandas1: pandas<2.0.0
-    pandas2: pandas<2.1.0
-    pandas3: pandas
+    pandas2: pandas>=2.0.0,<3.0.0
     sphinx_rtd_theme
 commands =
     coverage run -a -m pytest --basetemp={envtmpdir}
