Update Python versions and dependencies in configuration files

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,24 +4,18 @@ image:
 
 environment:
     matrix:
-        - TOXENV: py38-pandas1
-        - TOXENV: py38-pandas2
-        - TOXENV: py38-pandas3
-        - TOXENV: py39-pandas1
-        - TOXENV: py39-pandas2
-        - TOXENV: py39-pandas3
-        - TOXENV: py310-pandas1
         - TOXENV: py310-pandas2
-        - TOXENV: py310-pandas3
-        - TOXENV: py311-pandas1
         - TOXENV: py311-pandas2
-        - TOXENV: py311-pandas3
+        - TOXENV: py312-pandas2
+        - TOXENV: py313-pandas2
+        - TOXENV: py314-pandas2
         - TOXENV: flake8
         - TOXENV: doc8
 
 build: off
 
 install:
+    - py -m pip install --upgrade pip
     - py -m pip install tox
 
 test_script:
