--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,18 @@
 
 language: python
 python:
-    - "3.8"
-    - "3.9"
     - "3.10"
     - "3.11"
+    - "3.12"
+    - "3.13"
+    - "3.14"
 
-# Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-    - pip install tox-travis
-    - pip install codecov
+    - pip install --upgrade pip
+    - pip install tox tox-travis codecov
 
-# Command to run tests, e.g. python setup.py test
-script: tox
+script:
+    - tox
 
-after_success: codecov
+after_success:
+    - codecov
